[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/OtherEnemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Plant.gd" type="Script" id=2]
[ext_resource path="res://Sound/Crumble.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/EnemyHit.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "plant_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "plant_walk",
"speed": 2.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "plant_idle",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 16.0

[sub_resource type="Animation" id=11]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.215686, 1, 1, 0 ) ]
}

[node name="Plant" type="KinematicBody2D"]
script = ExtResource( 2 )
_type = "plant"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "plant_walk"

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 10 )

[node name="HitCooldownTimer" type="Timer" parent="."]

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 11 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 6.0
bus = "SFX"

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="HitCooldownTimer" to="." method="_on_HitCooldownTimer_timeout"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
